Docs fixes for dark mode and consistency

--- a/assets/styles/_col-sidebar.scss
+++ b/assets/styles/_col-sidebar.scss
@@ -58,7 +58,7 @@ body[data-url*="/components/in-field/"] #sidebar-menu #flush-collapseWeb a.fw-bo
   font-weight: normal !important;
 }
 
-body[data-url*="/components/mobile/"] #sidebar-menu #flush-collapseMobile a.fw-bold,
+body[data-url*="/components/mobile/"] #sidebar-menu #flush-collapseXR a.fw-bold,
 body[data-url*="/components/mobile/"] #sidebar-menu #flush-collapseInfield a.fw-bold,
 body[data-url*="/components/mobile/"] #sidebar-menu #flush-collapseWeb a.fw-bold {
   font-weight: normal !important;
